--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import 'src/styles/variables.scss';
 *,
 *::before,
 *::after {
@@ -51,12 +52,13 @@ html:focus-within {
 
 body {
   margin: 0;
-  padding: 0;
+  padding-inline: 16px;
   min-height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Manrope', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $Dark-Blue;
 }
 
 code {
