--- a/src/components/Generator/Generator.module.scss
+++ b/src/components/Generator/Generator.module.scss
@@ -62,8 +62,14 @@ main {
     cursor: pointer;
     margin: 0 auto;
     margin-top: -33px;
-    &:hover {
+
+    &:hover,
+    &:focus {
       box-shadow: 0px 0px 40px $Neon-Green;
+
+      svg {
+        transform: rotate(-180deg);
+      }
     }
   }
 }
